test/libsolidity/syntaxTests/dataLocations/publicFunction/public_function_return_parameters_no_data_location.sol
contract C {
    function h() public pure returns(uint[]) {}
}
// ----
// TypeError: (50-56): Storage location must be one of "memory" for parameter in public function, but none was given.
